[package]
name = "bb8-redis-cluster-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bb8 = "0.8.0"
redis = { version = "0.23.0", features = ["cluster-async", "tokio-comp"] }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
