[package]
name = "bb8-redis-cluster-async"
version = "0.1.0"
edition = "2021"
authors = ["Jaewon Choi <jwchoi.do@gmail.com>"]
keywords = ["redis", "cluster", "async"]
description = "async redis cluster connection pool"
license = "MIT"
repository = "https://github.com/hellojaewon/bb8-redis-cluster-async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
bb8 = "0.8.0"
redis = { version = "0.23.0", features = ["cluster-async", "tokio-comp"] }

[dev-dependencies]
tokio = { version = "1.28.0", features = ["full"] }
